sonarqube/route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: http
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`sonarqube.cams7.ml`)
      kind: Rule
      middlewares:
        - name: sonarqube-redirect-scheme  
      services:
        - name: sonarqube-sonarqube
          port: 9000
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: https
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sonarqube.cams7.ml`)
      kind: Rule
      services:
        - name: sonarqube-sonarqube
          port: 9000
  tls:
    secretName: sonarqube.cams7.ml
